--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,16 @@
+sudo: required
+
 language: java
+
 jdk:
 - oraclejdk8
+
+services:
+  - docker
+
+before_install:
+  - docker-compose -f docker/docker-compose.yml up
+  
 addons:
   sauce_connect:
     username: graylog
