--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ services:
   - docker
 
 before_install:
-  - docker-compose -f docker/docker-compose.yml up
-  
+  - docker-compose -f docker/docker-compose.yml up &
+
 addons:
   sauce_connect:
     username: graylog
