--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ services:
   - docker
 
 before_install:
-  - docker-compose -f docker/docker-compose.yml up &
+  - docker/bootstrap-server.sh
 
 addons:
   sauce_connect:
