--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>org.graylog</groupId>
             <artifactId>selenese-runner-java</artifactId>
-            <version>2.8.1-SNAPSHOT</version>
+            <version>2.8.1</version>
             <scope>test</scope>
         </dependency>
 
