Allowing to skip selenium tests.

--- a/pom.xml
+++ b/pom.xml
@@ -31,53 +31,61 @@
             <version>2.7.8</version>
         </dependency>
     </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.5.0</version>
-                <executions>
-                    <execution>
-                        <id>Execution Tests Selenium</id>
-                        <phase>integration-test</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>java</executable>
-                            <classpathScope>test</classpathScope>
-                            <longClasspath>true</longClasspath>
-                            <successCodes>
-                                <successCode>0</successCode>
-                                <successCode>3</successCode>
-                            </successCodes>
-                            <arguments>
-                                <argument>-classpath</argument>
-                                <classpath />
-                                <argument>jp.vmi.selenium.selenese.Main</argument>
-                                <argument>--driver</argument>
-                                <argument>remote</argument>
-                                <argument>--remote-url</argument>
-                                <argument>http://${sauceUser}:${sauceKey}@ondemand.saucelabs.com:80/wd/hub</argument>
-                                <argument>--remote-platform</argument>
-                                <argument>Linux</argument>
-                                <argument>--remote-browser</argument>
-                                <argument>Firefox</argument>
-                                <argument>--remote-tunnel-identifier</argument>
-                                <argument>${tunnelIdentifier}</argument>
-                                <argument>--html-result</argument>
-                                <argument>target/site/selenium-reports</argument>
-                                <argument>--xml-result</argument>
-                                <argument>target/failsafe-reports</argument>
-                                <argument>--baseurl</argument>
-                                <argument>${baseUrl}</argument>
-                                <argument>selenium/streams/Streams_Testsuite.html</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+    <profiles>
+        <profile>
+            <id>run-selenium-tests</id>
+            <activation>
+                <property><name>!skipTests</name></property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.5.0</version>
+                        <executions>
+                            <execution>
+                                <id>Execution Tests Selenium</id>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>java</executable>
+                                    <classpathScope>test</classpathScope>
+                                    <longClasspath>true</longClasspath>
+                                    <successCodes>
+                                        <successCode>0</successCode>
+                                        <successCode>3</successCode>
+                                    </successCodes>
+                                    <arguments>
+                                        <argument>-classpath</argument>
+                                        <classpath />
+                                        <argument>jp.vmi.selenium.selenese.Main</argument>
+                                        <argument>--driver</argument>
+                                        <argument>remote</argument>
+                                        <argument>--remote-url</argument>
+                                        <argument>http://${sauceUser}:${sauceKey}@ondemand.saucelabs.com:80/wd/hub</argument>
+                                        <argument>--remote-platform</argument>
+                                        <argument>Linux</argument>
+                                        <argument>--remote-browser</argument>
+                                        <argument>Firefox</argument>
+                                        <argument>--remote-tunnel-identifier</argument>
+                                        <argument>${tunnelIdentifier}</argument>
+                                        <argument>--html-result</argument>
+                                        <argument>target/site/selenium-reports</argument>
+                                        <argument>--xml-result</argument>
+                                        <argument>target/failsafe-reports</argument>
+                                        <argument>--baseurl</argument>
+                                        <argument>${baseUrl}</argument>
+                                        <argument>selenium/streams/Streams_Testsuite.html</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
