Using prebuilt image for now to speed up testing.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,7 +4,7 @@ some-elasticsearch:
   image: "elasticsearch:2"
   command: "elasticsearch -Des.cluster.name='graylog'"
 graylog:
-  image: graylog2/server-dev:latest
+  image: graylog2/server:latest
   environment:
     GRAYLOG_PASSWORD_SECRET: somepasswordpepper
     GRAYLOG_ROOT_PASSWORD_SHA2: 8c6976e5b5410415bde908bd4dee15dfb167a9c873fc4bb8a81f6f2ab448a918
