--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,10 @@
                                         <argument>target/failsafe-reports</argument>
                                         <argument>--baseurl</argument>
                                         <argument>${baseUrl}</argument>
+                                        <argument>--timeout</argument>
+                                        <argument>5000</argument>
+                                        <argument>--set-speed</argument>
+                                        <argument>0</argument>
                                         <argument>selenium/dashboards/Dashboards_Testsuite.html</argument>
                                         <argument>selenium/inputs/Inputs_Testsuite.html</argument>
                                         <argument>selenium/streams/Streams_Testsuite.html</argument>
