--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,10 +8,9 @@ graylog:
   environment:
     GRAYLOG_PASSWORD_SECRET: somepasswordpepper
     GRAYLOG_ROOT_PASSWORD_SHA2: 8c6976e5b5410415bde908bd4dee15dfb167a9c873fc4bb8a81f6f2ab448a918
-    GRAYLOG_REST_TRANSPORT_URI: http://127.0.0.1:12900
+    GRAYLOG_WEB_ENDPOINT_URI: http://127.0.0.1:9000/api
   links:
     - some-mongo:mongo
     - some-elasticsearch:elasticsearch
   ports:
     - "9000:9000"
-    - "12900:12900"
