--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,15 @@ services:
   - docker
 
 before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y libxml2-utils
   - docker/bootstrap-server.sh
 
 addons:
   sauce_connect: true
+
+after_success:
+  - ./read_results.sh
 
 after_failure:
   - ./read_results.sh
