--- a/pom.xml
+++ b/pom.xml
@@ -91,9 +91,7 @@
                                         <argument>5000</argument>
                                         <argument>--set-speed</argument>
                                         <argument>0</argument>
-                                        <argument>selenium/dashboards/Dashboards_Testsuite.html</argument>
-                                        <argument>selenium/inputs/Inputs_Testsuite.html</argument>
-                                        <argument>selenium/streams/Streams_Testsuite.html</argument>
+                                        <argument>selenium/*/*_Testsuite.html</argument>
                                     </arguments>
                                 </configuration>
                             </execution>
