--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
                                         <argument>selenium/dashboards/Dashboards_Testsuite.html</argument>
                                         <argument>selenium/inputs/Inputs_Testsuite.html</argument>
                                         <argument>selenium/streams/Streams_Testsuite.html</argument>
+                                        <argument>selenium/authentication/Authentication_Testsuite.html</argument>
                                     </arguments>
                                 </configuration>
                             </execution>
