Adding rest-client and guard to Gemfile, commit lockfile.

--- a/ruby/Gemfile
+++ b/ruby/Gemfile
@@ -3,4 +3,6 @@ source "https://rubygems.org"
 gem "rspec"
 gem "selenium-webdriver"
 gem "capybara"
+gem "rest-client"
 
+gem 'guard-rspec', require: false
