--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,16 +1,34 @@
-some-mongo:
-  image: "mongo:3"
-some-elasticsearch:
-  image: "elasticsearch:2"
-  command: "elasticsearch -Des.cluster.name='graylog'"
-graylog:
-  image: graylog2/server:latest
-  environment:
-    GRAYLOG_PASSWORD_SECRET: somepasswordpepper
-    GRAYLOG_ROOT_PASSWORD_SHA2: 8c6976e5b5410415bde908bd4dee15dfb167a9c873fc4bb8a81f6f2ab448a918
-    GRAYLOG_WEB_ENDPOINT_URI: http://127.0.0.1:9000/api
-  links:
-    - some-mongo:mongo
-    - some-elasticsearch:elasticsearch
-  ports:
-    - "9000:9000"
+version: '2'
+services:
+  some-mongo:
+    image: "mongo:3"
+  some-elasticsearch:
+    image: "elasticsearch:5.4"
+    command: "elasticsearch"
+  graylog:
+    image: graylog/server:latest
+    environment:
+      GRAYLOG_PASSWORD_SECRET: somepasswordpepper
+      GRAYLOG_ROOT_PASSWORD_SHA2: 8c6976e5b5410415bde908bd4dee15dfb167a9c873fc4bb8a81f6f2ab448a918
+      GRAYLOG_WEB_ENDPOINT_URI: http://127.0.0.1:9000/api
+      GRAYLOG_ELASTICSEARCH_HOSTS: http://elasticsearch:9200
+    links:
+      - some-mongo:mongo
+      - some-elasticsearch:elasticsearch
+    ports:
+      - "9000:9000"
+    depends_on:
+      - some-mongo
+      - some-elasticsearch
+  qa-frontend:
+    build: .
+    environment:
+      APP_HOST: http://graylog:9000/
+      API_HOST: http://graylog:9000/api
+      DRIVER_PROFILE: headless_chrome
+      CHROME_BINARY: /usr/bin/google-chrome
+    links:
+      - graylog:graylog
+    depends_on:
+      - graylog
+
